@@ -242,8 +242,12 @@ could not be loaded.
 ### 20.4.3 (in development)
 
 - IMPORTANT: deprecate for removal the I18NProvider interface; use `I18N.init(basename, locale)` instead
+- fix: remove --enable-native-access=javafx.graphics from native-image configuration for base project that does not use
+  JavaFX
 - fix: required field message should only be shown when a required field marker is set and should contain the configured symbol
-- allow changing the locale at runtime
+- support changing the locale at runtime
+- add `LangUtil.asUnmodifiableMap(Properties)`
+- declare `AbstractOptionBuilder.handler()` public
 
 ### 20.4.2
 
